# Puzzle

./: .gitignore  .gitmodules  Build_nano  README.md
.devcontainer/: Dockerfile  devcontainer.json  setup.sh
.devcontainer/config/: cuda.path
.devcontainer/scripts/: setup_udev_rules.sh
.prodcontainer/: Prodcontainer.md  jetson.Dockerfile  jetson.Dockerfile.dockerignore
.prodcontainer/scripts/: build_librealsense.sh
src/DroneStats/: CMakeLists.txt  package.xml
src/DroneStats/launch/: run.launch
src/DroneStats/rviz/: rviz.rviz
src/DroneStats/src/: DroneStatsRos.cpp
src/DroneStats/urdf/: drone.urdf
src/PxSitl/: CMakeLists.txt  package.xml
src/PxSitl/data/: 1config.yaml  config.yaml  quadrotor.dae
src/PxSitl/gazebo_sitl/models/PoseTest/: model.config  model.sdf
src/PxSitl/gazebo_sitl/models/big_gun/: model.sdf
src/PxSitl/gazebo_sitl/models/big_gun2/: model.config  model.sdf
src/PxSitl/gazebo_sitl/models/iris_puzzle/: iris_puzzle.sdf.jinja
src/PxSitl/gazebo_sitl/models/jinja_iris_depth_camera/: jinja_iris_depth_camera.sdf  jinja_iris_depth_camera.sdf.jinja  model.config
src/PxSitl/gazebo_sitl/models/olive/: model.sdf
src/PxSitl/gazebo_sitl/models/yp_gun/: model.config  model.sdf
src/PxSitl/gazebo_sitl/plugins/: BulletPlugin.cpp  CMakeLists.txt  GUIShootPlugin.cpp  GUIShootPlugin.hpp  Gun2Plugin.cpp  GunPlugin.cpp  ModelScale.cpp  PoseTestPlugin.cpp  YPGunPlugin.cpp  test.cpp
src/PxSitl/gazebo_sitl/worlds/: ModelScale.world  PoseTest.world  PoseTest2.world  puzzle.world  puzzle2.world  puzzle_pose_test.world  test.world
src/PxSitl/include/PxSitl/Utils/: Utils.h
src/PxSitl/include/PxSitl/Vision/: BallTracking.hpp  BallTrackingRos.hpp  RealsenseVH.hpp  RosVH.hpp  State.hpp  StateTracking.hpp  StateWait.hpp  Strategy.hpp  StrategyTracking.hpp  StrategyWait.hpp  TrackingParam.hpp  VideoHandler.hpp
src/PxSitl/include/PxSitl/utils/: Line.hpp
src/PxSitl/include/PxSitl/vision/: BallTracking.hpp  BallTrackingRos.hpp  RosVH.hpp  State.hpp  StateInit.cpp  StateInit.hpp  StateTracking.hpp  StateWait.cpp  StateWait.hpp  TrackingParam.hpp  Utils.hpp  VideoHandler.hpp
src/PxSitl/launch/: ball_tracking.launch  iris_puzzle.launch  multiple_uav_spawn.launch  ros_videohandler.launch  run.launch  single_uav_spawn.launch  single_vehicle_spawn.launch  takeoff.launch
src/PxSitl/legacy/vision/: StateTracking.cpp
src/PxSitl/legacy/vision/Strategy/: StrategyWait.hpp
src/PxSitl/rviz/: ballTest.rviz
src/PxSitl/scripts/: feature_matching_stream.py
src/PxSitl/src/: OffboardNode.cpp
src/PxSitl/src/drone/: OffboardNode.cpp
src/PxSitl/src/test/: BallTrackingTest.cpp
src/PxSitl/src/vision/: BallTracking.cpp  BallTrackingNode.cpp  BallTrackingRos.cpp  RealsenseVH.cpp  RosVH.cpp  StateTracking.cpp  StateWait.cpp  StrategyTracking.cpp  StrategyWait.cpp  TrackingParam.cpp  VideoHandler.cpp
src/PxSitl/src/vision/setup/: BallTrackingSetupNode.cpp  BallTrackingSetupRos.cpp  TrackingParam.cpp
src/puzzle/: CMakeLists.txt  package.xml
src/puzzle/launch/: launcher.launch
src/puzzle_aruco/: CMakeLists.txt  package.xml
src/puzzle_aruco/launch/: launcher.launch
src/puzzle_common/: CMakeLists.txt  package.xml
src/puzzle_common/include/puzzle_common/: PainterObjectBase.hpp  RvizPainter.hpp  RvizPainterObjects.hpp  RvizVisually.hpp
src/puzzle_common/rviz/: ballTest.rviz
src/puzzle_common/src/: PainterObjectBase.cpp
src/puzzle_debug/: CMakeLists.txt  package.xml
src/puzzle_debug/launch/: ball_tracking.launch  ball_tracking_kalman.launch  d435i_launcher.launch  launcher.launch  transform.launch
src/puzzle_debug/resource/: rosconsole.conf
src/puzzle_drone/: CMakeLists.txt  package.xml
src/puzzle_drone/launch/: ball_tracking.launch  ball_tracking_setup.launch  launcher.launch  static_tf.launch
src/puzzle_drone_marker/: CMakeLists.txt  package.xml
src/puzzle_drone_marker/include/puzzle_drone_marker/: RvizPainterObjects.hpp
src/puzzle_drone_marker/launch/: launcher.launch  static_tf.launch
src/puzzle_drone_marker/src/: main.cpp
src/puzzle_gazebo/: CMakeLists.txt  package.xml
src/puzzle_gazebo/launch/: ball_tracking.launch  iris_puzzle.launch  launcher.launch  multiple_uav_spawn.launch  single_uav_spawn.launch  static_tf.launch  takeoff.launch
src/puzzle_gazebo/models/big_gun/: model.config  model.sdf
src/puzzle_gazebo/models/iris_puzzle/: iris_puzzle.sdf.jinja  model.config
src/puzzle_gazebo/models/olive/: model.config  model.sdf
src/puzzle_gazebo/models/red_ball/: model.config  model.sdf
src/puzzle_gazebo/models/red_boll/: model.config  model.sdf
src/puzzle_gazebo/models/yp_gun/: model.config  model.sdf
src/puzzle_gazebo/plugins/: BulletPlugin.cpp  CMakeLists.txt  GUIShootPlugin.cpp  ModelScale.hpp  PoseTestPlugin.cpp  Utils.hpp  YPGunPlugin.cpp
src/puzzle_gazebo/rviz/: ballTest.rviz  rviz_conf.rviz
src/puzzle_gazebo/scripts/: jinja_gen.py
src/puzzle_gazebo/worlds/: puzzle.world  puzzle_pose_test.world  puzzle_red_ball_test.world  puzzle_red_boll_test.world  puzzle_sphere_red_ball.world  puzzle_test_dist.world
src/puzzle_msgs/: CMakeLists.txt  package.xml
src/puzzle_msgs/msg/: Metrics.msg
src/puzzle_reaction/: CMakeLists.txt  package.xml
src/puzzle_reaction/data/: config copy.yaml  config.yaml  d435_align_to_color.yaml  d435_hole_filling.yaml  d435_rgd_camera.yaml  d435_sterio_module.yaml
src/puzzle_reaction/include/puzzle_reaction/utils/: Line.hpp
src/puzzle_reaction/legacy/test/: BallTrackingTest.cpp
src/puzzle_reaction/legacy/vision/: BallTrackingOpenCV.cpp  HelloRealsense.cpp
src/puzzle_reaction/scripts/: feature_matching_stream.py
src/puzzle_reaction/src/drone/: OffboardNode.cpp
src/puzzle_reaction/src/vision/: BallTracking.cpp  BallTrackingNode.cpp  BallTrackingRos.cpp  RealsenseVH.cpp  RosVH.cpp  StateTracking.cpp  StateWait.cpp  VideoHandler.cpp
src/puzzle_transform/: CMakeLists.txt  package.xml
src/puzzle_transform/include/puzzle_transform/: PuzzleTransform.hpp
src/puzzle_transform/launch/: launcher.launch
src/puzzle_transform/src/: PuzzleTransform.cpp  PuzzleTransformNode.cpp
(+45 files in other folders)
