<?xml version="1.0"?>
<package format="2">
  <name>puzzle_aruco</name>
  <version>0.0.0</version>
  <description>The aruco package for puzzle project</description>

  <maintainer email="a.abalian2012@yandex.ru">root</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>aruco_ros</build_depend> 
  <exec_depend>aruco_ros</exec_depend>

  <export>

  </export>
</package>